fix spacing between flex service items

--- a/flexbox/4-styles.css
+++ b/flexbox/4-styles.css
@@ -339,17 +339,17 @@ a:active {
 }
 
 ul.row {
-  margin: 0;
+  margin: -1rem;
   padding: 0;
   list-style: none;
 }
 
 [class*="col-"] {
-  padding: 0.5rem;
+  margin: 1rem;
 }
 
 .col-1-3 {
-  width: 33.33%;
+  width: calc((100% / 3) - 2rem);
 }
 
 .col-1-2 {
@@ -523,6 +523,17 @@ ul.row {
 
 .section-hero .section-inner {
   padding: 10rem 40rem 2rem 0;
+}
+
+/* Section Latest news ============================= */
+.row {
+  flex-direction: row-reverse;
+}
+
+/* Section SERVICES ============================= */
+
+.section-services .row {
+  flex-wrap: wrap;
 }
 
 /*** 4. CARD ***/
